# obsrest

./: .dockerignore  .gitignore  Dockerfile  README.md  compose.yml  pyproject.toml
.github/workflows/: docker-publish.yml
app/: main.py  search_manager.py
